# cu-weather-visualization-project

./: .env.example  .gitignore  README.md  pyproject.toml
cu_weather_app/: api.py  weather.py
cu_weather_app/static/: style.css
cu_weather_app/templates/: base.html  weather.html
cu_weather_viz_app/: __init__.py  api.py  dash_app.py  weather.py
cu_weather_viz_app/templates/: base.html  result.html  weather.html
cu_weather_viz_app/weather/: __init__.py  post.py  utils.py  view.py
tests/: test_weather.py
