[project]
name = "cu_weather_viz_app"
version = "1.0.0"
description = "Central University AccuWeather app"
dependencies = [
    "flask[async]",
    "requests",
    "python-dotenv",
    "plotly",
    "dash",
    "asyncio",
    "aiohttp"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"